--- a/src/ExhibitorModule.iOS/ExhibitorModule.iOS.csproj
+++ b/src/ExhibitorModule.iOS/ExhibitorModule.iOS.csproj
@@ -139,6 +139,7 @@
     <None Include="FodyWeavers.xml" />
     <Compile Include="Renderers\IosFrameRenderer.cs" />
     <Compile Include="Services\FileService.cs" />
+    <Compile Include="Renderers\XDSSearchBarRenderer.cs" />
   </ItemGroup>
   <ItemGroup>
     <BundleResource Include="Resources\default.css" />
@@ -182,6 +183,10 @@
     <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Icon-App-76x76%402x.png" />
     <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Icon-App-83.5x83.5%402x.png" />
     <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\ItunesArtwork%402x.png" />
+    <ImageAsset Include="Assets.xcassets\addperson.imageset\Contents.json" />
+    <ImageAsset Include="Assets.xcassets\addperson.imageset\outline_person_add_white_24pt_1x.png" />
+    <ImageAsset Include="Assets.xcassets\addperson.imageset\outline_person_add_white_24pt_2x.png" />
+    <ImageAsset Include="Assets.xcassets\addperson.imageset\outline_person_add_white_24pt_3x.png" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="Resources\LaunchScreen.storyboard" />
@@ -249,6 +254,10 @@
       <Project>{C40267E1-F1FE-4D9C-A589-3B2C07E0785E}</Project>
       <Name>ExhibitorModule.Common</Name>
     </ProjectReference>
+    <ProjectReference Include="..\ExhibitorModule.Controls\ExhibitorModule.Controls.csproj">
+      <Project>{76C1799A-21B4-41AA-94ED-9E131873815D}</Project>
+      <Name>ExhibitorModule.Controls</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Assets.xcassets\event.imageset\" />
@@ -271,6 +280,7 @@
     <Folder Include="Assets.xcassets\settings.imageset\" />
     <Folder Include="Assets.xcassets\AppIcon2.appiconset\" />
     <Folder Include="Services\" />
+    <Folder Include="Assets.xcassets\addperson.imageset\" />
   </ItemGroup>
   <ItemGroup>
     <ITunesArtwork Include="iTunesArtwork%402x" />
