--- a/src/ExhibitorModule/ExhibitorModule.csproj
+++ b/src/ExhibitorModule/ExhibitorModule.csproj
@@ -48,8 +48,12 @@
     <ProjectReference Include="..\ExhibitorModule.Data\ExhibitorModule.Data.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Effects\" />
     <Folder Include="Views\Settings\" />
     <Folder Include="ViewModels\Settings\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="System.Collections.Immutable">
+      <HintPath>..\..\..\..\..\..\usr\local\share\dotnet\sdk\NuGetFallbackFolder\microsoft.netcore.app\2.1.0\ref\netcoreapp2.1\System.Collections.Immutable.dll</HintPath>
+    </Reference>
   </ItemGroup>
 </Project>
