--- a/src/ExhibitorModule.Droid/ExhibitorModule.Droid.csproj
+++ b/src/ExhibitorModule.Droid/ExhibitorModule.Droid.csproj
@@ -72,8 +72,8 @@
   <ItemGroup>
     <PackageReference Include="Fody" Version="4.1.0" PrivateAssets="all" />
     <PackageReference Include="PropertyChanged.Fody" Version="2.6.0" PrivateAssets="all" />
-    <PackageReference Include="Prism.Unity.Forms" Version="7.1.0.431" />
-    <PackageReference Include="Prism.Plugin.Popups" Version="2.2.0.293" />
+    <PackageReference Include="Prism.Unity.Forms" Version="7.2.0.1347-pre" />
+    <PackageReference Include="Prism.Plugin.Popups" Version="2.4.0.417-pre" />
     <PackageReference Include="Refractored.MvvmHelpers" Version="1.3.0" />
     <PackageReference Include="Microsoft.AppCenter.Analytics" Version="2.0.0" />
     <PackageReference Include="Microsoft.AppCenter.Crashes" Version="2.0.0" />
@@ -124,6 +124,9 @@
     </PackageReference>
     <PackageReference Include="Plugin.FirebasePushNotification">
       <Version>2.3.5</Version>
+    </PackageReference>
+    <PackageReference Include="Prism.Forms.Extended">
+      <Version>1.0.0.497-pre</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
