--- a/src/ExhibitorModule.Models/ExhibitorModule.Models.csproj
+++ b/src/ExhibitorModule.Models/ExhibitorModule.Models.csproj
@@ -10,7 +10,7 @@
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
     <PackageReference Include="System.Xml.XDocument" Version="4.3.0" />
-    <PackageReference Include="Prism.Core" Version="7.1.0.431" />
+    <PackageReference Include="Prism.Core" Version="7.2.0.1347-pre" />
     <PackageReference Include="CClarke.Plugin.Calendars" Version="1.0.0" />
     <PackageReference Include="Fody" Version="4.1.0" />
     <PackageReference Include="PropertyChanged.Fody" Version="2.6.0" />
