--- a/src/ExhibitorModule/ExhibitorModule.csproj
+++ b/src/ExhibitorModule/ExhibitorModule.csproj
@@ -9,8 +9,8 @@
   <ItemGroup>
     <PackageReference Include="Fody" Version="4.1.0" PrivateAssets="all" />
     <PackageReference Include="PropertyChanged.Fody" Version="2.6.0" PrivateAssets="all" />
-    <PackageReference Include="Prism.Unity.Forms" Version="7.1.0.431" />
-    <PackageReference Include="Prism.Plugin.Popups" Version="2.2.0.293" />
+    <PackageReference Include="Prism.Unity.Forms" Version="7.2.0.1347-pre" />
+    <PackageReference Include="Prism.Plugin.Popups" Version="2.4.0.417-pre" />
     <PackageReference Include="Refractored.MvvmHelpers" Version="1.3.0" />
     <PackageReference Include="Acr.UserDialogs" Version="7.0.1" />
     <PackageReference Include="Xamarin.FFImageLoading.Forms" Version="2.4.6.929" />
@@ -27,6 +27,7 @@
     <PackageReference Include="IntelliAbb.Xamarin.Controls" Version="1.0.148" />
     <PackageReference Include="CClarke.Plugin.Calendars" Version="1.0.0" />
     <PackageReference Include="Plugin.FirebasePushNotification" Version="2.3.5" />
+    <PackageReference Include="Prism.Forms.Extended" Version="1.0.0.497-pre" />
   </ItemGroup>
 
   <ItemGroup>
@@ -50,10 +51,7 @@
   <ItemGroup>
     <Folder Include="Views\Settings\" />
     <Folder Include="ViewModels\Settings\" />
-  </ItemGroup>
-  <ItemGroup>
-    <Reference Include="System.Collections.Immutable">
-      <HintPath>..\..\..\..\..\..\usr\local\share\dotnet\sdk\NuGetFallbackFolder\microsoft.netcore.app\2.1.0\ref\netcoreapp2.1\System.Collections.Immutable.dll</HintPath>
-    </Reference>
+    <Folder Include="Views\Dialogs\" />
+    <Folder Include="ViewModels\Dialogs\" />
   </ItemGroup>
 </Project>
