Working on connecting to backend

--- a/src/ExhibitorModule.Models/ExhibitorModule.Models.csproj
+++ b/src/ExhibitorModule.Models/ExhibitorModule.Models.csproj
@@ -19,4 +19,7 @@
   <ItemGroup>
     <Compile Remove="Event.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="DTO\" />
+  </ItemGroup>
 </Project>
