--- a/src/ExhibitorModule.iOS/ExhibitorModule.iOS.csproj
+++ b/src/ExhibitorModule.iOS/ExhibitorModule.iOS.csproj
@@ -348,5 +348,8 @@
     <ITunesArtwork Include="iTunesArtwork%402x" />
     <ITunesArtwork Include="iTunesArtwork" />
   </ItemGroup>
+  <ItemGroup>
+    <LinkDescription Include="LinkerSettings.xml" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
 </Project>
