Use Shiny FileSystem instead of Xamarin.Essentials

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -50,6 +50,7 @@ stages:
       displayName: NuGet Restore
       inputs:
         noCache: true
+        restoreSolution: '**/ExhibitorModule.csproj'
 
     - task: MSBuild@1
       displayName: Build Projects
