--- a/src/ExhibitorModule.Droid/ExhibitorModule.Droid.csproj
+++ b/src/ExhibitorModule.Droid/ExhibitorModule.Droid.csproj
@@ -127,6 +127,8 @@
     <AndroidResource Include="Resources\mipmap-xhdpi\ic_launcher.png" />
     <AndroidResource Include="Resources\mipmap-xxhdpi\ic_launcher.png" />
     <AndroidResource Include="Resources\mipmap-xxxhdpi\ic_launcher.png" />
+    <AndroidResource Include="Resources\drawable\add.xml" />
+    <AndroidResource Include="Resources\drawable\notes.xml" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Properties\AndroidManifest.xml" />
