--- a/src/ExhibitorModule.iOS/ExhibitorModule.iOS.csproj
+++ b/src/ExhibitorModule.iOS/ExhibitorModule.iOS.csproj
@@ -287,6 +287,10 @@
     <ImageAsset Include="Assets.xcassets\notes.imageset\outline_speaker_notes_black_24pt_3x.png">
       <Visible>false</Visible>
     </ImageAsset>
+    <ImageAsset Include="Assets.xcassets\add.imageset\baseline_add_black_24pt_1x.png" />
+    <ImageAsset Include="Assets.xcassets\add.imageset\baseline_add_black_24pt_2x.png" />
+    <ImageAsset Include="Assets.xcassets\add.imageset\baseline_add_black_24pt_3x.png" />
+    <ImageAsset Include="Assets.xcassets\add.imageset\Contents.json" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="Resources\LaunchScreen.storyboard" />
@@ -337,6 +341,7 @@
     <Folder Include="Assets.xcassets\openbrowser.imageset\" />
     <Folder Include="Assets.xcassets\time.imageset\" />
     <Folder Include="Assets.xcassets\timings.imageset\" />
+    <Folder Include="Assets.xcassets\add.imageset\" />
   </ItemGroup>
   <ItemGroup>
     <ITunesArtwork Include="iTunesArtwork%402x" />
