--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -46,10 +46,7 @@ stages:
       inputs:
         versionSpec: 5.0.2
 
-    - task: NuGetCommand@2
-      displayName: NuGet Restore
-      inputs:
-        noCache: true
+    - powershell: nuget restore
 
     - task: MSBuild@1
       displayName: Build Projects
