--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -41,7 +41,7 @@ stages:
     steps:
     - powershell: |
        Invoke-WebRequest -Uri 'https://dist.nuget.org/win-x86-commandline/v5.1.0/nuget.exe' -OutFile 'nuget.exe'
-       nuget.exe restore
+       ./nuget.exe restore
       displayName: NuGet Restore
 
     - task: MSBuild@1
