--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -40,14 +40,18 @@ stages:
       - AndroidSDK
     steps:
     - powershell: |
+       Write-Host "Downloading nuget.exe"
        Invoke-WebRequest -Uri 'https://dist.nuget.org/win-x86-commandline/v5.1.0/nuget.exe' -OutFile 'nuget.exe'
-       ./nuget.exe restore
+       Write-Host "Clearing local cache"
+       ./nuget.exe locals all --clear
+       Write-Host "Restoring NuGet packages"
+       ./nuget.exe restore src/ExhibitorModule/ExhibitorModule.csproj
       displayName: NuGet Restore
 
     - task: MSBuild@1
       displayName: Build Projects
       inputs:
-        solution: '**/ExhibitorModule.csproj'
+        solution: 'src/ExhibitorModule//ExhibitorModule.csproj'
         configuration: $(BuildConfiguration)
         msbuildArguments: '/p:DebugType=portable /p:JavaSdkDirectory="$(JAVA_HOME)"'
 
