--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -43,7 +43,7 @@ stages:
        Write-Host "Downloading nuget.exe"
        Invoke-WebRequest -Uri 'https://dist.nuget.org/win-x86-commandline/v5.1.0/nuget.exe' -OutFile 'nuget.exe'
        Write-Host "Clearing local cache"
-       ./nuget.exe locals all --clear
+       ./nuget.exe locals all -clear
        Write-Host "Restoring NuGet packages"
        ./nuget.exe restore src/ExhibitorModule/ExhibitorModule.csproj -NoCache -NonInteractive
       displayName: NuGet Restore
