--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,7 +32,7 @@ stages:
   - job: buildJob
     displayName: Build Module
     pool:
-      vmImage: windows-2019
+      vmImage: macOS-10.14
       demands:
       - MSBuild
       - Xamarin.Android
