--- a/src/ExhibitorModule.iOS/ExhibitorModule.iOS.csproj
+++ b/src/ExhibitorModule.iOS/ExhibitorModule.iOS.csproj
@@ -287,10 +287,18 @@
     <ImageAsset Include="Assets.xcassets\notes.imageset\outline_speaker_notes_black_24pt_3x.png">
       <Visible>false</Visible>
     </ImageAsset>
-    <ImageAsset Include="Assets.xcassets\add.imageset\baseline_add_black_24pt_1x.png" />
-    <ImageAsset Include="Assets.xcassets\add.imageset\baseline_add_black_24pt_2x.png" />
-    <ImageAsset Include="Assets.xcassets\add.imageset\baseline_add_black_24pt_3x.png" />
-    <ImageAsset Include="Assets.xcassets\add.imageset\Contents.json" />
+    <ImageAsset Include="Assets.xcassets\add.imageset\baseline_add_black_24pt_1x.png">
+      <Visible>false</Visible>
+    </ImageAsset>
+    <ImageAsset Include="Assets.xcassets\add.imageset\baseline_add_black_24pt_2x.png">
+      <Visible>false</Visible>
+    </ImageAsset>
+    <ImageAsset Include="Assets.xcassets\add.imageset\baseline_add_black_24pt_3x.png">
+      <Visible>false</Visible>
+    </ImageAsset>
+    <ImageAsset Include="Assets.xcassets\add.imageset\Contents.json">
+      <Visible>false</Visible>
+    </ImageAsset>
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="Resources\LaunchScreen.storyboard" />
@@ -306,9 +314,9 @@
       <Version>1.0.0.511-pre</Version>
     </PackageReference>
     <PackageReference Include="Refractored.MvvmHelpers" Version="1.3.0" />
-    <PackageReference Include="Acr.UserDialogs" Version="7.0.1" />
-    <PackageReference Include="Xamarin.FFImageLoading.Forms" Version="2.4.6.929" />
-    <PackageReference Include="Xamarin.FFImageLoading.Transformations" Version="2.4.6.929" />
+    <PackageReference Include="Acr.UserDialogs" Version="7.0.4" />
+    <PackageReference Include="Xamarin.FFImageLoading.Forms" Version="2.4.11.982" />
+    <PackageReference Include="Xamarin.FFImageLoading.Transformations" Version="2.4.11.982" />
     <PackageReference Include="Xamarin.Forms">
       <Version>3.6.0.344457</Version>
     </PackageReference>
@@ -341,7 +349,6 @@
     <Folder Include="Assets.xcassets\openbrowser.imageset\" />
     <Folder Include="Assets.xcassets\time.imageset\" />
     <Folder Include="Assets.xcassets\timings.imageset\" />
-    <Folder Include="Assets.xcassets\add.imageset\" />
   </ItemGroup>
   <ItemGroup>
     <ITunesArtwork Include="iTunesArtwork%402x" />
