--- a/src/ExhibitorModule/ExhibitorModule.csproj
+++ b/src/ExhibitorModule/ExhibitorModule.csproj
@@ -45,11 +45,24 @@
     <PackageReference Include="Xamarin.Forms" Version="3.6.0.539721" PrivateAssets="all" />
     <PackageReference Include="Fody" Version="4.1.0" PrivateAssets="all" />
     <PackageReference Include="PropertyChanged.Fody" Version="2.6.0" PrivateAssets="all" />
+    <PackageReference Include="Xamarin.FFImageLoading.Svg.Forms" Version="2.4.11.982" />
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="Resources\add.svg" />
+    <EmbeddedResource Include="Resources\email.svg" />
+    <EmbeddedResource Include="Resources\notes.svg" />
+    <EmbeddedResource Include="Resources\add_circle.svg" />
+  </ItemGroup>
+  <ItemGroup>
     <EmbeddedResource Update="Strings\*.resx" Generator="ResXFileCodeGenerator" LastGenOutput="%(Filename).Designer.cs" />
     <Compile Update="Strings\Resources.Designer.cs" DesignTime="True" AutoGen="True" DependentUpon="Resources.resx" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Remove="Resources\add.svg" />
+    <None Remove="Resources\email.svg" />
+    <None Remove="Resources\notes.svg" />
+    <None Remove="Resources\add_circle.svg" />
   </ItemGroup>
   <ItemGroup>
     <None Update="FodyWeavers.xsd">
